--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,8 +49,9 @@ a {
 p {
     font-size: 16px;
 }
-
+/*main image after header*/
 .hero {
+    alt:"Team meeting";
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -58,7 +59,7 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/*general formatting*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -68,7 +69,7 @@ p {
     float: right;
     margin-left: 25px;
 }
-
+/*the main 3 articles*/
 main {
     width: 75%;
     display: inline-block;
